fix(_home.scss): adding additional small mobile styling to mobile menu to prevent cut off level
needed to add a new, smaller, media query to target smaller screens to prevent level from being
squished/cut off

--- a/resources/assets/sass/pages/_home.scss
+++ b/resources/assets/sass/pages/_home.scss
@@ -2561,3 +2561,10 @@ section#content-container {
     margin: 50px;
   }
 }
+
+// Mobile CSS to be applied for extra small screens
+@media screen and (max-width: 350px) {
+  .level-information {
+    margin-left: 20px;
+  }
+}
